--- a/src/components/Operation/Operation.scss
+++ b/src/components/Operation/Operation.scss
@@ -11,7 +11,7 @@ body {
     padding-top: 80px;
     padding-bottom: 80px;
     span {
-        font-size: 11rem;
+        font-size: 20vw;
         font-weight: 600;
         letter-spacing: 10px;
     }
