--- a/src/components/Operation/Operation.scss
+++ b/src/components/Operation/Operation.scss
@@ -5,14 +5,24 @@ body {
     background-color: $primary;
 }
 
+h2 {
+    font-size: 3em;
+    font-family: sans-serif;
+}
+
 .Operation {
     margin-top: 10%;
     border: 15px solid #000;
-    padding-top: 80px;
-    padding-bottom: 80px;
-    span {
-        font-size: 20vw;
+    padding: 80px 10px;
+    p, h2 {
+        margin: 0;
+    }
+    .operation {
+        font-size: 15rem;
         font-weight: 600;
         letter-spacing: 10px;
+        @media (max-width: 600px) {
+            font-size: 4em;
+        }
     }
 }
